--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Expensify</title> 
+        <title>Expensify</title>
+        <link rel="stylesheet" type="text/css" href="/styles.css" />
     </head>
 
     <body>
